updated blog posts to new style

--- a/unit1_projects/blog-template2.html
+++ b/unit1_projects/blog-template2.html
@@ -22,8 +22,7 @@
 			<a href="http://punksuhate.bandcamp.com/track/full-circle"><img src="images/playicon.gif" /></a>
 		</section>
 		<section id="blogs">
-			<h1 style="margin: auto">COMING SOON! Stay tuned...</h1><br/>
-			<p><!--***START BLOG CONTENT HERE***--></p>
+			<!-- BLOG GOES HERE -->
 		</section>
 	</div>
 </body>
