--- a/unit1_projects/week4_cultural_blog.html
+++ b/unit1_projects/week4_cultural_blog.html
@@ -1,41 +1,35 @@
-<!doctype html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css" />
-	<title>Culture Blog: Refactoring Racism - Meritocracy and Diversity in Tech</title>
+	<link rel="stylesheet" type="text/css" href="stylesheets/reset.css" />
+	<link href='http://fonts.googleapis.com/css?family=Krona+One' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:500' rel='stylesheet' type='text/css'>	
+	<link rel="stylesheet" type="text/css" href="stylesheets/blog-template2.css" />
+	<title>Duke Greene is Doing Dev Bootcamp</title>
 </head>
 <body>
-	<div id="header">
-		<a href="https://www.facebook.com/dukegreene">Facebook Me</a>
-		<a href="https://www.twitter.com/dukegreene">Tweet Me</a>
-		<a href="https://www.github.com/dukegreene">Git Me</a>
-		<a href="https://dukegreene.wordpress.com">Press Me</a>
-		<a href="https://www.linkedin.com/pub/duke-greene/94/774/4ab">Link With Me</a>
-		<a href="http://punksuhate.bandcamp.com/track/full-circle">Rock With Me</a>
-		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Roll With Me</a>
+	<div id="wrapper" class="clearfix">
+		<a href="http://dukegreene.github.io"><header>
+			<h1>DUKE GREENE IS BLOGGING DEV BOOTCAMP</h1>
+		</header></a>
 	</div>
-	<div class="left">
-		<img src="http://i.imgur.com/Gn86uKc.jpg" />
-		<h2>Duke's DBC Blog</h2>
-		<p>I'm a guy who writes stuff like songs and rhymes and blog posts. I can sing and juggle (kind of) and my daughter thinks I'm hilarious. When I'm not being a dad or a performer, I handle social media, journalism, purchasing and project management duties for a small communications firm in West Michigan.</p>
-		<p>For me, Dev Bootcamp represents a chance to rewire my thinking. A lifetime fixed-mindset adherent, I'm trying to learn how to love learning, for all its bumps and sharp edges. I'm trying to love failure. And I'm trying to love feedback. Please let me know what I've done well. Or let me know what I screwed up, so I can grow from the experience.</p>
-		<p>This isn't my real blog. At least, not yet. One day I might buy a better domain name and turn this into something more glorious. Until then, I'm letting Wordpress do the grunt work for me, and focusing on the words. I update regularly about Dev Bootcamp stuff and my own learning/thinking process in hopes that someone may relate and take away something meaningful. Click the "Press Me" link in the header to read my other set of words.</p>
-		<br/>
-		<br/>
-		<h3>PREVIOUS POSTS:</h3>
-		<p>[none]</p>
-  </div>
-	<div class="right">
-		<h1 style="margin: auto">Refactoring Racism - Meritocracy and Diversity in Tech</h1>
-		<p>This century is all about STEM. Advancements in science, medicine and technology have paved the way for a vibrant tech economy where a person can earn a livelihood with a laptop and a head full of code. Tech jobs pay well and will likely be in high demand for the foreseeable future. With these perks, it's no wonder that people are clamoring for careers in tech. But who's doing the clamoring? In an ideal world, we would see a cross-section of humanity – largely nonwhite, half female, young and old – in the list of tech applicants. In the real world, the applicant pool is overwhelmingly young, male, and white or Asian. Experts point to this homogenous talent pool as the reason for the tech world's current diversity problem. Black and Latino communities, as well as women of every color, are severely underrepresented in tech. Google recently made headlines by taking its diversity numbers public in an effort to spark a wider conversation about how to change the face of tech in America to better reflect the faces of Americans.</p>
-		<p>Tech needs diversity if it wants to keep calling itself a meritocracy. For decades, Silicon Valley has prided itself on a culture where the best ideas flourish and the hardest workers thrive. But if 25% of the country's demographic makeup (and one of its genders) are being systematically excluded in the talent pool, that means the best and brightest from those groups aren't up for consideration at the same rate. At best, that means the tech world is disconnected from the reality of a diverse and discerning customer base. At worst, it means that somewhere down the line, a black kid with the potential to change the tech world was shoved off that path by societal forces beyond his reckoning.</p>
-		<p>I don't think the tech world is racist, but I think it is pragmatic, and in a comfortable enough position to be aloof about the implications of that pragmatism. Some status quo apologists hide behind "meritocracy" as a reason not to be more proactive. If someone isn't good enough for the job, they say, that person shouldn't get the job. Doesn't looking at physical traits just dilute the importance of finding a truly qualified candidate?</p>
-		<p>Ironically, this stance ignores the years before a person applies to a tech job, years when unfair housing practices, discriminatory school policies, and gentrified career networks have already taken their toll on an individual's assessment of their own place in the world. Perhaps, if more inner city students had access to working computers, we'd see more tech applicants from the inner city. Maybe if tech conferences used fewer instances of scantily-clad booth babes and presenters leaned less heavily on sexually-charged humor, we'd see more women able to stomach the idea of entering a serious career in that field. If our world could become more equal, then tech would see its applicant pool follow suit.</p>
-		<p>No one is making any tech company responsible for fixing societal ills that existed long before the Internet. But the smartest companies are working on those problems anyway. By investing in education programs and camps for youth and enacting policies that treat diversity as added value in the hiring process, companies have started taking steps toward leveling the playing field and putting merit before homogeneity. As Internet access becomes more and more universal, the future will probably have a lot more room for those who want access to information without having access to the powerstructures that used to protect that information. Resources like Khan Academy mean that a third-grader can have a teacher who doesn't care whether they understand the concepts based on their skin color, and still learn as much as he is capable of. Online coding schools mean that a woman can learn to code on her own time, even if all the experts she knows don't think computers are "for her."</p>
+	<div id="wrapper" class="clearfix">
+		<section id="links">
+			<a href="https://www.facebook.com/dukegreene"><img src="images/facebook.gif" /></a>
+			<a href="https://www.twitter.com/dukegreene"><img src="images/twitter-circle-black-512.png" style="width: 76%"/></a>
+			<a href="https://www.github.com/dukegreene"><img src="images/github.gif" /></a>
+			<a href="https://dukegreene.wordpress.com"><img src="images/wp-icon.png" /></a>
+			<a href="https://www.linkedin.com/pub/duke-greene/94/774/4ab"><img src="images/linkedin-Icon-BW.png" /></a>
+			<a href="http://punksuhate.bandcamp.com/track/full-circle"><img src="images/playicon.gif" /></a>
+		</section>
+		<section id="blogs">
+			<h1 style="margin: auto">Refactoring Racism - Meritocracy and Diversity in Tech</h1><br/>
+		<p>This century is all about STEM. Advancements in science, medicine and technology have paved the way for a vibrant tech economy where a person can earn a livelihood with a laptop and a head full of code. Tech jobs pay well and will likely be in high demand for the foreseeable future. With these perks, it's no wonder that people are clamoring for careers in tech. But who's doing the clamoring? In an ideal world, we would see a cross-section of humanity – largely nonwhite, half female, young and old – in the list of tech applicants. In the real world, the applicant pool is overwhelmingly young, male, and white or Asian. Experts point to this homogenous talent pool as the reason for the tech world's current diversity problem. Black and Latino communities, as well as women of every color, are severely underrepresented in tech. Google recently made headlines by taking its diversity numbers public in an effort to spark a wider conversation about how to change the face of tech in America to better reflect the faces of Americans.</p><br>
+		<p>Tech needs diversity if it wants to keep calling itself a meritocracy. For decades, Silicon Valley has prided itself on a culture where the best ideas flourish and the hardest workers thrive. But if 25% of the country's demographic makeup (and one of its genders) are being systematically excluded in the talent pool, that means the best and brightest from those groups aren't up for consideration at the same rate. At best, that means the tech world is disconnected from the reality of a diverse and discerning customer base. At worst, it means that somewhere down the line, a black kid with the potential to change the tech world was shoved off that path by societal forces beyond his reckoning.</p><br>
+		<p>I don't think the tech world is racist, but I think it is pragmatic, and in a comfortable enough position to be aloof about the implications of that pragmatism. Some status quo apologists hide behind "meritocracy" as a reason not to be more proactive. If someone isn't good enough for the job, they say, that person shouldn't get the job. Doesn't looking at physical traits just dilute the importance of finding a truly qualified candidate?</p><br>
+		<p>Ironically, this stance ignores the years before a person applies to a tech job, years when unfair housing practices, discriminatory school policies, and gentrified career networks have already taken their toll on an individual's assessment of their own place in the world. Perhaps, if more inner city students had access to working computers, we'd see more tech applicants from the inner city. Maybe if tech conferences used fewer instances of scantily-clad booth babes and presenters leaned less heavily on sexually-charged humor, we'd see more women able to stomach the idea of entering a serious career in that field. If our world could become more equal, then tech would see its applicant pool follow suit.</p><br>
+		<p>No one is making any tech company responsible for fixing societal ills that existed long before the Internet. But the smartest companies are working on those problems anyway. By investing in education programs and camps for youth and enacting policies that treat diversity as added value in the hiring process, companies have started taking steps toward leveling the playing field and putting merit before homogeneity. As Internet access becomes more and more universal, the future will probably have a lot more room for those who want access to information without having access to the powerstructures that used to protect that information. Resources like Khan Academy mean that a third-grader can have a teacher who doesn't care whether they understand the concepts based on their skin color, and still learn as much as he is capable of. Online coding schools mean that a woman can learn to code on her own time, even if all the experts she knows don't think computers are "for her."</p><br>
 		<p>The ultimate goal is a world where meritocracy is more than a backhanded explanation for segregated hiring. There is so much merit that goes wasted because of systemic roadblocks to success for disadvantaged groups. By examining the causes of an overwhelmingly white and male supply tech job applicants, tech can choose to take responsibility for its own success in a future that will require diverse thinkers.</p>
-	</div>
-	<div id="footer">
-		<span>This was created and written by Duke Greene in 2014. Thanks for checking it out.</span>
+		</section>
 	</div>
 </body>
 </html>
