--- a/unit1_projects/week5_cultural_blog.html
+++ b/unit1_projects/week5_cultural_blog.html
@@ -1,41 +1,35 @@
-<!doctype html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css" />
-	<title>Culture Blog: A.S.K. Not What Your Pair Can Do For You...</title>
+	<link rel="stylesheet" type="text/css" href="stylesheets/reset.css" />
+	<link href='http://fonts.googleapis.com/css?family=Krona+One' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:500' rel='stylesheet' type='text/css'>	
+	<link rel="stylesheet" type="text/css" href="stylesheets/blog-template2.css" />
+	<title>Duke Greene is Doing Dev Bootcamp</title>
 </head>
 <body>
-	<div id="header">
-		<a href="https://www.facebook.com/dukegreene">Facebook Me</a>
-		<a href="https://www.twitter.com/dukegreene">Tweet Me</a>
-		<a href="https://www.github.com/dukegreene">Git Me</a>
-		<a href="https://dukegreene.wordpress.com">Press Me</a>
-		<a href="https://www.linkedin.com/pub/duke-greene/94/774/4ab">Link With Me</a>
-		<a href="http://punksuhate.bandcamp.com/track/full-circle">Rock With Me</a>
-		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Roll With Me</a>
+	<div id="wrapper" class="clearfix">
+		<a href="http://dukegreene.github.io"><header>
+			<h1>DUKE GREENE IS BLOGGING DEV BOOTCAMP</h1>
+		</header></a>
 	</div>
-	<div class="left">
-		<img src="http://i.imgur.com/Gn86uKc.jpg" />
-		<h2>Duke's DBC Blog</h2>
-		<p>I'm a guy who writes stuff like songs and rhymes and blog posts. I can sing and juggle (kind of) and my daughter thinks I'm hilarious. When I'm not being a dad or a performer, I handle social media, journalism, purchasing and project management duties for a small communications firm in West Michigan.</p>
-		<p>For me, Dev Bootcamp represents a chance to rewire my thinking. A lifetime fixed-mindset adherent, I'm trying to learn how to love learning, for all its bumps and sharp edges. I'm trying to love failure. And I'm trying to love feedback. Please let me know what I've done well. Or let me know what I screwed up, so I can grow from the experience.</p>
-		<p>This isn't my real blog. At least, not yet. One day I might buy a better domain name and turn this into something more glorious. Until then, I'm letting Wordpress do the grunt work for me, and focusing on the words. I update regularly about Dev Bootcamp stuff and my own learning/thinking process in hopes that someone may relate and take away something meaningful. Click the "Press Me" link in the header to read my other set of words.</p>
-		<br/>
-		<br/>
-		<h3>PREVIOUS POSTS:</h3>
-		<p>[none]</p>
-  </div>
-	<div class="right">
-		<h1 style="margin: auto">A.S.K. Not What Your Pair Can Do For You...</h1>
-		<p>So far, pairing has been my favorite part of the DBC experience. When I plug in my headphones at the scheduled time and click "join video call," my heart rate increases and I start fidgeting, full of nervous energy about what the next hour will bring. Will the other person be cool? Will we get along? Will I hold us back? Will we be able to solve the problem at hand? Every new pair brings a new rush of possibility. As a closet introvert, I've always joked that I love human interaction as long as I know when it will end. Perhaps I've found my true calling with peer pairing, because I am more focused, task-oriented, and <em>empathetic</em> in the context of a pairing hour than I am in many other contexts.</p>
-		<p>My favorite thing about pairing is that it offers flexibility with rules. I try to be very specific about defining driver/navigator roles at the start of each session, because it makes me feel more free to explore and push myself within those roles, and it saves me from the burden of being more than one person at once. Working alone, I have to check my syntax for errors, double-check poorly understood concepts on Google, and manage the actual code all at once. With two people, the load is lighter and each step seems to go more smoothly. I love it when a pair corrects my syntax or tells me to get out of my rabbit hole and move on to the next step, because it saves me from detours that could potentially take up hours of my time.</p>
-		<p>I also enjoy how pairing requires me to be clear about the thoughts in my own head. Once, during a challenge, I was navigating and trying to describe how I wanted a given loop to work. It turned out that I was going about it all wrong, and I realized that the instant I tried to speak my thoughts out loud. I was relieved that I wasn't working alone, where I may have banged my head against the wall for a while before recognizing my flawed premise. So, just as it can speed up some elements of coding, pairing can also slow down the process enough to provide clarity and purpose.</p>
-		<p>Receiving good feedback from a pair is probably the best part about pairing, because it functions as a way to see myself through someone else's eyes. I tend to get very self-critical and downplay my mastery of this coding stuff, which is all brand new to me. So I was delighted to see that my pairs so far all think I'm handling the material well. (Sometimes it takes a bit of external verification to build self esteem!) Reading my feedback, I've also noticed a couple of blind spots that I had not seen before, like how I can sometimes get hyper-focused on my role and lose sight of the big picture, or how I can be hasty about providing a suggestion without talking through my reasoning first. When I'm getting this feedback regularly, impartially, and honestly, I can choose to ignore it and work in a vaccuum, or I can choose to recognize it and set goals to improve my next pair's experience.</p>
-		<p>Knowing I'll also be giving feedback after every pairing session helps me to stay focused and in the moment. I use A.S.K. (Actionable, Specifi, Kind) as my yardstick, and I check my feedback in that order before submitting it. That means I write feedback to be actionable first, then make it as specific as possible. When that's taken care of, I know kindness is almost assured. It helps me to think of my role as feedback-giver as a valuable part of my pair's progress. If I were my pair, I would want every pairing session to either give me a focus to work on for next time, or confirm that something I did last time is good enough to be repeated. So I try to write feedback that gives that information.</p>
-		<p>Based on the feedback I've received so far, I will continue to start sessions with a check-in and stay positive and personable through each pairing session. I will also strive to "think out loud" more often, refraining from offering a solution without also offering my reasoning for that solution. And I'll keep respecting every interaction for what it is: a chance to learn about programming AND myself, and a chance to help my pair do the same.</p>
-	</div>
-	<div id="footer">
-		<span>This was created and written by Duke Greene in 2014. Thanks for checking it out.</span>
+	<div id="wrapper" class="clearfix">
+		<section id="links">
+			<a href="https://www.facebook.com/dukegreene"><img src="images/facebook.gif" /></a>
+			<a href="https://www.twitter.com/dukegreene"><img src="images/twitter-circle-black-512.png" style="width: 76%"/></a>
+			<a href="https://www.github.com/dukegreene"><img src="images/github.gif" /></a>
+			<a href="https://dukegreene.wordpress.com"><img src="images/wp-icon.png" /></a>
+			<a href="https://www.linkedin.com/pub/duke-greene/94/774/4ab"><img src="images/linkedin-Icon-BW.png" /></a>
+			<a href="http://punksuhate.bandcamp.com/track/full-circle"><img src="images/playicon.gif" /></a>
+		</section>
+		<section id="blogs">
+			<h1 style="margin: auto">A.S.K. Not What Your Pair Can Do For You...</h1><br/>
+			<p>So far, pairing has been my favorite part of the DBC experience. When I plug in my headphones at the scheduled time and click "join video call," my heart rate increases and I start fidgeting, full of nervous energy about what the next hour will bring. Will the other person be cool? Will we get along? Will I hold us back? Will we be able to solve the problem at hand? Every new pair brings a new rush of possibility. As a closet introvert, I've always joked that I love human interaction as long as I know when it will end. Perhaps I've found my true calling with peer pairing, because I am more focused, task-oriented, and <em>empathetic</em> in the context of a pairing hour than I am in many other contexts.</p><br>
+			<p>My favorite thing about pairing is that it offers flexibility with rules. I try to be very specific about defining driver/navigator roles at the start of each session, because it makes me feel more free to explore and push myself within those roles, and it saves me from the burden of being more than one person at once. Working alone, I have to check my syntax for errors, double-check poorly understood concepts on Google, and manage the actual code all at once. With two people, the load is lighter and each step seems to go more smoothly. I love it when a pair corrects my syntax or tells me to get out of my rabbit hole and move on to the next step, because it saves me from detours that could potentially take up hours of my time.</p><br>
+			<p>I also enjoy how pairing requires me to be clear about the thoughts in my own head. Once, during a challenge, I was navigating and trying to describe how I wanted a given loop to work. It turned out that I was going about it all wrong, and I realized that the instant I tried to speak my thoughts out loud. I was relieved that I wasn't working alone, where I may have banged my head against the wall for a while before recognizing my flawed premise. So, just as it can speed up some elements of coding, pairing can also slow down the process enough to provide clarity and purpose.</p><br>
+			<p>Receiving good feedback from a pair is probably the best part about pairing, because it functions as a way to see myself through someone else's eyes. I tend to get very self-critical and downplay my mastery of this coding stuff, which is all brand new to me. So I was delighted to see that my pairs so far all think I'm handling the material well. (Sometimes it takes a bit of external verification to build self esteem!) Reading my feedback, I've also noticed a couple of blind spots that I had not seen before, like how I can sometimes get hyper-focused on my role and lose sight of the big picture, or how I can be hasty about providing a suggestion without talking through my reasoning first. When I'm getting this feedback regularly, impartially, and honestly, I can choose to ignore it and work in a vaccuum, or I can choose to recognize it and set goals to improve my next pair's experience.</p><br>
+			<p>Knowing I'll also be giving feedback after every pairing session helps me to stay focused and in the moment. I use A.S.K. (Actionable, Specifi, Kind) as my yardstick, and I check my feedback in that order before submitting it. That means I write feedback to be actionable first, then make it as specific as possible. When that's taken care of, I know kindness is almost assured. It helps me to think of my role as feedback-giver as a valuable part of my pair's progress. If I were my pair, I would want every pairing session to either give me a focus to work on for next time, or confirm that something I did last time is good enough to be repeated. So I try to write feedback that gives that information.</p><br>
+			<p>Based on the feedback I've received so far, I will continue to start sessions with a check-in and stay positive and personable through each pairing session. I will also strive to "think out loud" more often, refraining from offering a solution without also offering my reasoning for that solution. And I'll keep respecting every interaction for what it is: a chance to learn about programming AND myself, and a chance to help my pair do the same.</p>
+		</section>
 	</div>
 </body>
 </html>
