--- a/unit1_projects/week6_cultural_blog.html
+++ b/unit1_projects/week6_cultural_blog.html
@@ -1,43 +1,37 @@
-<!doctype html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="stylesheets/blog_template.css" />
-	<title>Culture Blog: No, I Don't Play Football.</title>
+	<link rel="stylesheet" type="text/css" href="stylesheets/reset.css" />
+	<link href='http://fonts.googleapis.com/css?family=Krona+One' rel='stylesheet' type='text/css'>
+	<link href='http://fonts.googleapis.com/css?family=Alegreya+Sans:500' rel='stylesheet' type='text/css'>	
+	<link rel="stylesheet" type="text/css" href="stylesheets/blog-template2.css" />
+	<title>Duke Greene is Doing Dev Bootcamp</title>
 </head>
 <body>
-	<div id="header">
-		<a href="https://www.facebook.com/dukegreene">Facebook Me</a>
-		<a href="https://www.twitter.com/dukegreene">Tweet Me</a>
-		<a href="https://www.github.com/dukegreene">Git Me</a>
-		<a href="https://dukegreene.wordpress.com">Press Me</a>
-		<a href="https://www.linkedin.com/pub/duke-greene/94/774/4ab">Link With Me</a>
-		<a href="http://punksuhate.bandcamp.com/track/full-circle">Rock With Me</a>
-		<a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">Roll With Me</a>
+	<div id="wrapper" class="clearfix">
+		<a href="http://dukegreene.github.io"><header>
+			<h1>DUKE GREENE IS BLOGGING DEV BOOTCAMP</h1>
+		</header></a>
 	</div>
-	<div class="left">
-		<img src="http://i.imgur.com/Gn86uKc.jpg" />
-		<h2>Duke's DBC Blog</h2>
-		<p>I'm a guy who writes stuff like songs and rhymes and blog posts. I can sing and juggle (kind of) and my daughter thinks I'm hilarious. When I'm not being a dad or a performer, I handle social media, journalism, purchasing and project management duties for a small communications firm in West Michigan.</p>
-		<p>For me, Dev Bootcamp represents a chance to rewire my thinking. A lifetime fixed-mindset adherent, I'm trying to learn how to love learning, for all its bumps and sharp edges. I'm trying to love failure. And I'm trying to love feedback. Please let me know what I've done well. Or let me know what I screwed up, so I can grow from the experience.</p>
-		<p>This isn't my real blog. At least, not yet. One day I might buy a better domain name and turn this into something more glorious. Until then, I'm letting Wordpress do the grunt work for me, and focusing on the words. I update regularly about Dev Bootcamp stuff and my own learning/thinking process in hopes that someone may relate and take away something meaningful. Click the "Press Me" link in the header to read my other set of words.</p>
-		<br/>
-		<br/>
-		<h3>PREVIOUS POSTS:</h3>
-		<p>[none]</p>
-  </div>
-	<div class="right">
-		<h1 style="margin: auto">No, I Don't Play Football.</h1>
-		<p>It was like being typecast in real life. My teacher sat down across from my parents and told them I was not doing well in math because I "just didn't get" long division. On the surface, that's kind of how it looked. I'd stare off into space instead of doing the problems when study time rolled around, I rarely turned in my work, and when I did, the paper showed only the answer with no calculations. I might be cheating or using a calculator on those, the teacher said. But there was no way someone with my aptitude could be solving those problems in my head. Someone like me wasn't smart enough.</p>
-		<p>Except I was. I had been doing the problems in my head because writing out all my work felt tedious. And eventually I stopped doing the work because it stopped challenging me. I was a smart, headstrong kid. Other smart, headstrong kids my age were in special gifted/talented courses where instructors harnessed all their mental energy in a positive way. I didn't get that kind of structure; when I acted out due to extreme boredom, I was sent to the library for hours at a time, devouring books of my own choosing instead of sitting through lessons. Why wasn't I considered smart enough for the gifted courses? Why was my disinterest in lessons seen as a sign of low potential? Could it be because I was one of only three black kids in my elementary school? </p>
-		<p>I started high school in a different district, but the attitudes I faced were similar. I lost count of the times I turned down a football coach's advances. I had been a choir kid my whole life, and I wasn't about to add athletics to my full load of extracurriculars. In fact, I was and am one of the least physically inclined people I know. But that didn't stop me from being scouted like an untapped vein of raw talent. In what I can only hope is totally unrelated news, black students were disproportionately well-represented on the football team, even though they made up a small minority of the student body.</p>
-		<p>I faced the threat of two stereotypes growing up. First I could have been the dumb black kid, and later I could have been the strong black kid. The danger of stereotype threat is not that other people could have gotten the wrong idea about me. It's that I could have gotten the wrong idea about myself.</p>
-		<p>In another world, I could have let it sink in that I was probably bad at math, that I wouldn't belong in a group of smart kids, that I should probably stick to other subjects, that my future would be brighter if I embraced my number-clumsy nature. I could have let myself believe that football was my calling, that I wouldn't belong with the music nerds and drama heads, that I should probably stick to the weight room and stop pretending I could make any other meaningful contributions to my school's culture.</p>
-		<p>But I don't need to go to another world to see stereotype threat at work. I'm trying to break into a field with a known diversity problem, one that's been attributed to self-selection. The argument goes that tech is overwhelmingly male and White or Asian because that's the makeup of the applicant supply. Why aren't there more female, Black or Latino people seeking careers in tech? Maybe it's due to thousands of small social cues that those groups "just don't get" tech and might be more comfortable somewhere else. Again, the problem is not that these prejudices exist. The threat is that the target will believe the stereotype to be true about themselves.</p>
-		<p>So how do we fight back against stereotype threat? Two ideas spring to mind, and we've been talking about them at DBC for weeks now. With a habit of mindfulness, people can better monitor their thought processes and more quickly identify distorted self-concepts arising from societal stereotypes. And a well-cultivated growth mindset can build self confidence and counteract thoughts of permanently not belonging or being inferior. If growth is always possible, stereotypes will never tell my whole story, even if some of them start out being true. (And who's to say I would have had to choose between football and music? Am I not strong enough to tackle both, pun intended?) Like many issues around diversity, the root problems here are systemic, but many of the most easily implemented solutions are indivisual in nature.</p>
-		<p>The kid who didn't get long division ended up getting top-percentile math scores in high school. How many great programmers are out there, unaware of their potential because they're believing lies someone else told them about themselves?</p>
-	</div>
-	<div id="footer">
-		<span>This was created and written by Duke Greene in 2014. Thanks for checking it out.</span>
+	<div id="wrapper" class="clearfix">
+		<section id="links">
+			<a href="https://www.facebook.com/dukegreene"><img src="images/facebook.gif" /></a>
+			<a href="https://www.twitter.com/dukegreene"><img src="images/twitter-circle-black-512.png" style="width: 76%"/></a>
+			<a href="https://www.github.com/dukegreene"><img src="images/github.gif" /></a>
+			<a href="https://dukegreene.wordpress.com"><img src="images/wp-icon.png" /></a>
+			<a href="https://www.linkedin.com/pub/duke-greene/94/774/4ab"><img src="images/linkedin-Icon-BW.png" /></a>
+			<a href="http://punksuhate.bandcamp.com/track/full-circle"><img src="images/playicon.gif" /></a>
+		</section>
+		<section id="blogs">
+			<h1 style="margin: auto">No, I Don't Play Football.</h1><br/>
+			<p>It was like being typecast in real life. My teacher sat down across from my parents and told them I was not doing well in math because I "just didn't get" long division. On the surface, that's kind of how it looked. I'd stare off into space instead of doing the problems when study time rolled around, I rarely turned in my work, and when I did, the paper showed only the answer with no calculations. I might be cheating or using a calculator on those, the teacher said. But there was no way someone with my aptitude could be solving those problems in my head. Someone like me wasn't smart enough.</p><br>
+			<p>Except I was. I had been doing the problems in my head because writing out all my work felt tedious. And eventually I stopped doing the work because it stopped challenging me. I was a smart, headstrong kid. Other smart, headstrong kids my age were in special gifted/talented courses where instructors harnessed all their mental energy in a positive way. I didn't get that kind of structure; when I acted out due to extreme boredom, I was sent to the library for hours at a time, devouring books of my own choosing instead of sitting through lessons. Why wasn't I considered smart enough for the gifted courses? Why was my disinterest in lessons seen as a sign of low potential? Could it be because I was one of only three black kids in my elementary school? </p><br>
+			<p>I started high school in a different district, but the attitudes I faced were similar. I lost count of the times I turned down a football coach's advances. I had been a choir kid my whole life, and I wasn't about to add athletics to my full load of extracurriculars. In fact, I was and am one of the least physically inclined people I know. But that didn't stop me from being scouted like an untapped vein of raw talent. In what I can only hope is totally unrelated news, black students were disproportionately well-represented on the football team, even though they made up a small minority of the student body.</p><br>
+			<p>I faced the threat of two stereotypes growing up. First I could have been the dumb black kid, and later I could have been the strong black kid who doesn't need to worry about mental stuff because he's strong. Either option nets the same result. The danger of stereotype threat is not that other people could have gotten the wrong idea about me. It's that I could have gotten the wrong idea about myself.</p><br>
+			<p>In another world, I could have let it sink in that I was probably bad at math, that I wouldn't belong in a group of smart kids, that I should probably stick to other subjects, that my future would be brighter if I embraced my number-clumsy nature. I could have let myself believe that football was my calling, that I wouldn't belong with the music nerds and drama heads, that I should probably stick to the weight room and stop pretending I could make any other meaningful contributions to my school's culture.</p><br>
+			<p>But I don't need to go to another world to see stereotype threat at work. I'm trying to break into a field with a known diversity problem, one that's been attributed to self-selection. The argument goes that tech is overwhelmingly male and White or Asian because that's the makeup of the applicant supply. Why aren't there more female, Black or Latino people seeking careers in tech? Maybe it's due to thousands of small social cues that those groups "just don't get" tech and might be more comfortable somewhere else. Again, the problem is not that these prejudices exist. The threat is that the target will believe the stereotype to be true about themselves.</p><br>
+			<p>So how do we fight back against stereotype threat? Two ideas spring to mind, and we've been talking about them at DBC for weeks now. With a habit of mindfulness, people can better monitor their thought processes and more quickly identify distorted self-concepts arising from societal stereotypes. And a well-cultivated growth mindset can build self confidence and counteract thoughts of permanently not belonging or being inferior. If growth is always possible, stereotypes will never tell my whole story, even if some of them start out being true. (And who's to say I would have had to choose between football and music? Am I not strong enough to tackle both, pun intended?) Like many issues around diversity, the root problems here are systemic, but many of the most easily implemented solutions are indivisual in nature.</p><br>
+			<p>The kid who didn't get long division ended up getting top-percentile math scores in high school. How many great programmers are out there, unaware of their potential because they're believing lies someone else told them about themselves?</p>
+		</section>
 	</div>
 </body>
 </html>
